--- a/report.html
+++ b/report.html
@@ -20,7 +20,7 @@
   </header>
   <section class="form-section">
     <h2>Lost Item Form</h2>
-    <form id="lostForm" method="POST" enctype="multipart/form-data">
+    <form id="lostForm" method="POST" action="backend/add_lost_item.php" enctype="multipart/form-data">
       <label>Item Name:</label>
       <input type="text" id="itemName" name="name" required>
       <label>Description:</label>
