Fix error no data listing from get_items

--- a/listing.html
+++ b/listing.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <header class="header">
     <div class="container">
       <img src="utm-logo.png" alt="UTM Logo" class="logo">
@@ -22,10 +21,8 @@
 
   <section class="form-section">
     <h2>Lost and Found Items</h2>
-
     <input type="text" id="searchInput" placeholder="Search items..." onkeyup="filterAdminItems()">
 
-    <!-- ✅ Tambah table supaya JS boleh isi baris -->
     <table>
       <thead>
         <tr>
@@ -36,7 +33,7 @@
         </tr>
       </thead>
       <tbody>
-        <!-- baris akan dimasukkan oleh script.js -->
+        <!-- Data dari JS akan masuk sini -->
       </tbody>
     </table>
   </section>
